Fri Aug 14 17:17:42 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/Makefile.in (MKDIRS): revert r24525.

Fri Aug 14 16:28:19 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/digest/lib/digest/hmac.rb (Digest::HMAC#initialize): faster
	  code.

Fri Aug 14 14:31:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (rubyhdrdir): fixed typo.  [ruby-dev:39079]

Fri Aug 14 00:29:22 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* doc/ChangeLog-1.8.0: add forgotten entry contributed by
	  TAKAHASHI Kaoru.  [ruby-dev:39065]

Fri Aug 14 00:19:49 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/delegate.rb (Delegator#method_missing): __FILE__ may contain
	  multi-byte characters.  a patch from Kenta Murata in [ruby-dev:39066].

Thu Aug 13 21:01:03 2009  wanabe  <s.wanabe@gmail.com>

	* vm.c (vm_exec): returning from lambda runs ensure section.
	  [Bug #1729]

Thu Aug 13 18:40:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_CHECK_SIZEOF): set cross_compiling to yes
	  only when AC_COMPUTE_INT, and inverted the arguments.

Thu Aug 13 18:22:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_CHECK_SIZEOF): use AC_COMPUTE_INT instead of
	  _AC_COMPUTE_INT_COMPILE with cross compiling, since its arguments
	  have been changed at autoconf 2.64.

Thu Aug 13 16:31:10 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* insns.def (opt_case_dispatch): suppressed a warning.

	* vm_insnhelper.c (opt_case_dispatch_i): ditto.

Thu Aug 13 16:20:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in, Makefile.in (MAKEDIRS): used MKDIR_P instead of
	  as_mkdir_p.  [ruby-dev:39063]

Thu Aug 13 15:37:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* regenc.c (onigenc_strlen_null, onigenc_str_bytelen_null): fixed
	  infinite loop for wide encodings.  reported by Ralf Junker a
	  [ruby-core:24892].  [ruby-core:24904]

Wed Aug 12 21:07:46 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
