@@ -1,3 +1,12 @@
+Fri Aug 14 17:59:12 2009  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* re.c (rb_reg_preprocess_dregexp): change Exception class to
+	  RegexpError.
+
+	* test/ruby/test_m17n.rb (test_regexp_usascii): follow above.
+
+	* test/ruby/test_m17n.rb (test_regexp_embed): ditto.
+
 Fri Aug 14 17:17:42 2009  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* enc/Makefile.in (MKDIRS): revert r24525.
